--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <hr>
     </div>
     <div class="row">
-      <div class="col-md-12 text-center"><img src="img/about.jpg" class="img-responsive"></div>
+      <div class="col-md-12 text-center"><img src="img/about.JPG" class="img-responsive"></div>
       <div class="col-md-8 col-md-offset-2">
         <div class="about-text" >
           <p> Hello, I'm Anand Vasireddy. I am currently living in New Hampshire and pursuing my masters programme in Computer Information Systems from New England College.
